tests/types/errors/assign_to_const.expr
const i32 value = 1;
value = 2;
